<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.producktivity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_usage_data"
        android:name="com.example.producktivity.ui.usage_data.UsageDataFragment"
        android:label="@string/menu_data"
        tools:layout="@layout/usage_data" />


    <fragment
        android:id="@+id/nav_todo"
        android:name="com.example.producktivity.ui.scrolling_to_do.TaskFragment"
        android:label="@string/menu_todo"
        tools:layout="@layout/to_do" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.producktivity.ui.share.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/calendar" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.producktivity.ui.blockSelect.BlockSelectFragment"
        android:label="@string/menu_block"
        tools:layout="@layout/profile" />
</navigation>